--- a/index.html
+++ b/index.html
@@ -100,57 +100,68 @@
             <div class="featured__works">
               <article class="work">
                 <div class="work__img-wrap">
-                  <img src="img/settinsg.png" alt="" class="work__img" />
+                    <img src="img/settinsg.png" alt="" class="work__img">
                 </div>
                 <div class="work__info">
-                  <h2 class="work__subtitle">Designing Dashboards</h2>
-                  <div class="works__subtitle">
-                    <div class="work__day">2020</div>
-                    <div class="work__category">Dashboard</div>
-                  </div>
-                  <div class="work__text">
-                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
-                    do amet sint. Velit officia consequat duis enim velit
-                    mollit. Exercitation veniam consequat sunt nostrud amet.
-                  </div>
-                </div>
-              </article>
-              <article class="work">
-                <div class="work__img-wrap">
-                  <img src="img/womenpng.png" alt="" class="work__img" />                 
-                </div>
-                <div class="work__info">
-                  <h2 class="work__subtitle">Vibrant Portraits of 2020</h2>
-                  <div class="works__subtitle">
-                    <div class="work__day">2020</div>
-                    <div class="work__category">Dashboard</div>
-                  </div>
-                  <div class="work__text">
-                    Amet minim mollit non deserunt ullamco est sit aliqua
-                    dolor do amet sint. Velit officia consequat duis enim
-                    velit mollit. Exercitation veniam consequat sunt nostrud
-                    amet.
-                  </div>
-                </div>
-              </article>
-              <article class="work">
-                <div class="work__img-wrap">
-                  <img src="img/balck.png" alt="" class="work__img" />
-                  <div class="work__info">
-                    <h2>36 Days of Malayalam type</h2>
-                    <div class="works__subtitle">
-                      <div class="work__day">2020</div>
-                      <div class="work__category">Dashboard</div>
+                    <div class="work__info-title">Designing Dashboards</div>
+                    <div class="work__subtitle">
+                        <div class="work__date">
+                            2020
+                        </div>
+                        <div class="work__category">
+                            Dashboard
+                        </div>
                     </div>
                     <div class="work__text">
-                      Amet minim mollit non deserunt ullamco est sit aliqua
-                      dolor do amet sint. Velit officia consequat duis enim
-                      velit mollit. Exercitation veniam consequat sunt nostrud
-                      amet.
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                        officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                        amet.
                     </div>
-                  </div>
                 </div>
-              </article>
+            </article>
+            
+              <article class="work">
+                <div class="work__img-wrap">
+                    <img src="img/womenpng.png" alt="" class="work__img">
+                </div>
+                <div class="work__info">
+                    <div class="work__info-title">Designing Dashboards</div>
+                    <div class="work__subtitle">
+                        <div class="work__date">
+                            2020
+                        </div>
+                        <div class="work__category">
+                            Dashboard
+                        </div>
+                    </div>
+                    <div class="work__text">
+                        Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                        officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                        amet.
+                    </div>
+                </div>
+            </article>
+              <article class="work">
+                <div class="work__img-wrap">
+              <mg src="img/balck.png" alt="" class="work__img">
+                            </div>
+                            <div class="work__info">
+                                <div class="work__info-title">Designing Dashboards</div>
+                                <div class="work__subtitle">
+                                    <div class="work__date">
+                                        2020
+                                    </div>
+                                    <div class="work__category">
+                                        Dashboard
+                                    </div>
+                                </div>
+                                <div class="work__text">
+                                    Amet minim mollit non deserunt ullamco est sit aliqua dolor do amet sint. Velit
+                                    officia consequat duis enim velit mollit. Exercitation veniam consequat sunt nostrud
+                                    amet.
+                                </div>
+                            </div>
+                        </article>
             </div>
           </div>
         </section>
@@ -159,10 +170,17 @@
             <div class="messengers">
               <ul>
                 <li>
-                  <img src="" alt="/img/fb (1) — копия.png">
-                  <img src="" alt="">
+                  <img src="img/insta — копия.png" alt=""class="inst">
+                </li>
+                <li>
+                  <img src="img/fb (1) — копия.png" alt=""class="fcbook">
+                </li>
+                  <img src="img/Group — копия.png" alt=""class="groopy">
+                </li> 
+                  <img src="img/Linkedin — копия.png" alt=""class="linki">
                 </li>
               </ul>
+             <div class="info__messengers">Copyright ©2020 All rights reserved </div> 
             </div>
           </div>
         </footer>
