--- a/work.html
+++ b/work.html
@@ -38,65 +38,10 @@
         </div>
       </header>
       <main class="main">
-        <section class="about">
-          <div class="container about__container">
-            <div class="about__info">
-              <h1 class="about__title">
-                Привет, я Джон, <br />
-                Креативный технолог
-              </h1>
-              <div class="about__desc">
-                Lorem ipsum dolor sit amet consectetur adipisicing elit. In vel
-                cupiditate, ex delectus labore sapiente, assumenda laboriosam
-                similique perspiciatis dolore eveniet dignissimos. Totam, autem
-                nihil. Esse dolorem laborum id blanditiis.
-              </div>
-              <button class="button download-btn">Скачать резюме</button>
-            </div>
-            <div class="about__avatar">
-              <img src="img/John.png" alt="Автар" class="about__img" />
-            </div>
-          </div>
-        </section>
-        <section class="recent-posts">
-          <div class="container">
-            <div class="recent-posts__top">
-              <div class="recent-posts__title title-category">Recent posts</div>
-              <a href="#" class="recent-posts__link">View all</a>
-            </div>
-            <div class="recent-posts__articles">
-              <article class="recent-posts__article">
-                <a href="#" class="recent-posts__article-title"
-                  >Making a design system from scratch</a
-                >
-                <div class="recent-posts__info">
-                  12 Feb 2020 <span class="separator">|</span>Design, Pattern
-                </div>
-                <div class="recent-posts__articles-content">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.
-                </div>
-              </article>
-              <article class="recent-posts__article">
-                <a href="#" class="recent-posts__article-title"
-                  >Making a design system from scratch</a
-                >
-                <div class="recent-posts__info">
-                  12 Feb 2020 <span class="separator">|</span>Design, Pattern
-                </div>
-                <div class="recent-posts__articles-content">
-                  Amet minim mollit non deserunt ullamco est sit aliqua dolor do
-                  amet sint. Velit officia consequat duis enim velit mollit.
-                  Exercitation veniam consequat sunt nostrud amet.
-                </div>
-              </article>
-            </div>
-          </div>
-        </section>
+       
         <section class="featured">
           <div class="container">
-            <div class="title-category">Featured works</div>
+            <div class="title-category"> works</div>
             <div class="featured__works">
               <article class="work">
                 <div class="work__img-wrap">
@@ -115,6 +60,7 @@
                   </div>
                 </div>
               </article>
+              
 
               <article class="work">
                 <div class="work__img-wrap">
@@ -136,6 +82,22 @@
               <article class="work">
                 <div class="work__img-wrap">
                   <img src="img/balck.png" alt="" class="work__img" />
+                </div>
+                <div class="work__info">
+                  <div class="work__info-title">Designing Dashboards</div>
+                  <div class="work__subtitle">
+                    <div class="work__date">2020</div>
+                    <div class="work__category">Dashboard</div>
+                  </div>
+                  <div class="work__text">
+                    Amet minim mollit non deserunt ullamco est sit aliqua dolor
+                    do amet sint. Velit officia consequat duis enim velit
+                    mollit. Exercitation veniam consequat sunt nostrud amet.
+                  </div>
+                </div>
+              </article><article class="work">
+                <div class="work__img-wrap">
+                  <img src="img/red.png" alt="" class="work__img" />
                 </div>
                 <div class="work__info">
                   <div class="work__info-title">Designing Dashboards</div>
